--- a/TableCreation.html
+++ b/TableCreation.html
@@ -19,7 +19,7 @@
             <li>
                 <a href="#EMP4">Employee 104 - jaya </a>
             </li>
-        
+      </ol>
          <center>
     <table border="1" >
 
@@ -29,13 +29,14 @@
     <th>ID</th>
     <th>NAME</th>
     <th>DESGINATION</th>
-    <th>SHIFT</th>
+    <th colspan ="2">SHIFT</th>
  </tr>
  <tr id="EMP1">
     <td>101</td>
     <td>vijay</td>
     <td>Manager</td>
     <td>morning</td>
+    <td>afternoon</td>
  </tr>
  <tr id="EMP2">
     <td>102</td>
@@ -48,6 +49,7 @@
     <td>karthick</td>
     <td>Assistent Manager</td>
     <td>night</td>
+    <td>afternoon</td>
  </tr>
  <tr id="EMP4">
     <td>104</td>
@@ -59,6 +61,5 @@
  </tr>
     </table>
     </center>
-    </ol>
 </body>
 </html>
